content section align/position issue fix in heroku

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ header {
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
-.name {
+.container {
 	margin: auto;
 	width: 970px;
 }
@@ -77,7 +77,7 @@ a
 	width: 650px; 
 	height: auto;
 	margin-top: 30px;
-	margin-left: 270px;
+	/*margin-left: 270px;*/
 	margin-bottom: 30px;
 	padding: 25px;
 
@@ -88,7 +88,7 @@ a
 	padding: 20px;
 	border: 1px #ffffff;
 	margin-top: 30px;
-	margin-right: 250px;
+	/*margin-right: 250px;*/
 	height: 150px;
 	width: 200px;
 	background: #ffffff;
